// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli 1`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 2`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {
      1 => Array [
        "dir",
      ],
    },
  },
}
`;

exports[`cli 3`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "dir",
      ],
    },
  },
}
`;

exports[`cli 4`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 5`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 6`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {
      1 => Array [],
    },
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [],
    },
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 7`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      0 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 8`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 9`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 10`] = `
Object {
  "config": undefined,
  "draft": undefined,
  "extraMetadata": undefined,
  "prepackaged": undefined,
  "prerelease": undefined,
  "projectDir": undefined,
  "publish": undefined,
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;
